Autoencoder practice notebook modifiications

--- a/Autoencoder_notebook.ipynb
+++ b/Autoencoder_notebook.ipynb
@@ -447,7 +447,32 @@
       "loss: 0.062088  [25664/60000]\n",
       "loss: 0.066613  [32064/60000]\n",
       "loss: 0.062536  [38464/60000]\n",
-      "loss: 0.062101  [44864/60000]\n"
+      "loss: 0.062101  [44864/60000]\n",
+      "loss: 0.072100  [51264/60000]\n",
+      "loss: 0.063558  [57664/60000]\n",
+      "Test Error: \n",
+      " Avg loss: 0.064060 \n",
+      "\n",
+      "Epoch 7\n",
+      "-------------------------------\n",
+      "loss: 0.062351  [   64/60000]\n",
+      "loss: 0.066156  [ 6464/60000]\n",
+      "loss: 0.060019  [12864/60000]\n",
+      "loss: 0.070916  [19264/60000]\n",
+      "loss: 0.062888  [25664/60000]\n",
+      "loss: 0.064768  [32064/60000]\n",
+      "loss: 0.061745  [38464/60000]\n",
+      "loss: 0.060528  [44864/60000]\n",
+      "loss: 0.072029  [51264/60000]\n",
+      "loss: 0.064062  [57664/60000]\n",
+      "Test Error: \n",
+      " Avg loss: 0.064189 \n",
+      "\n",
+      "Epoch 8\n",
+      "-------------------------------\n",
+      "loss: 0.062100  [   64/60000]\n",
+      "loss: 0.066731  [ 6464/60000]\n",
+      "loss: 0.058626  [12864/60000]\n"
      ]
     }
    ],
