almost done with auto encoder conv notebook! and quit the MLP one

--- a/Autoencoder_notebook.ipynb
+++ b/Autoencoder_notebook.ipynb
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Build the Network #\n"
+    "# Build the Model #\n"
    ]
   },
   {
@@ -956,6 +956,13 @@
     "\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
